--- a/WarmingUp_with_MNIST/RoadMap.ipynb
+++ b/WarmingUp_with_MNIST/RoadMap.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNvYx+9/EpOSfCUMVQT+qH4",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPLaonuMWt4L2+1Uov/C0sx"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/ThOpaque/Food_Recognition/blob/main/RoadMap.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -108,28 +97,13 @@
         "\n",
         "[IMG YOLO ARCHITECTURE]\n",
         "\n",
-        "But of course, to achieve my purpuse on MNIST, I do not need a such complex model. So, I created a Darknet-like one, by keeping the same global topology :\n",
+        "But of course, to achieve my purpuse on MNIST, I do not need a such complex model. So, I created a [Darknet-like](https://github.com/ThOpaque/Food_Recognition/blob/main/WarmingUp_with_MNIST/Darknet_like.py) one, by keeping the same global topology :\n",
         "- Using CNN Blocks which contains a convolutional layer, a batch normalization layer and a LeakyReLU activation\n",
         "- CNN Blocks are followed by a MaxPool layer except the last ones before fully connected layers\n",
         "- LeakyReLU activation between the two fully connected layers\n",
         "- The last fully connected layer outputs a tensor of size (N, S, S, C+B+4+1)\n",
         "\n",
         "To make the code cleaner, I choose to dissociate the \"classification output\" (used to classify the digits) and the \"regression output\" (used to predict the bounding box coordinates) in the forward. \n",
-        "\n",
-        "### CNN Block\n",
-        "```python\n",
-        "class CNNBlock(torch.nn.Module):\n",
-        "    def __init__(self, in_channels, out_channels, **kwargs):\n",
-        "        super(CNNBlock, self).__init__()\n",
-        "        self.conv = torch.nn.Conv2d(in_channels, out_channels, bias=False, **kwargs)\n",
-        "        self.bn = torch.nn.BatchNorm2d(out_channels)\n",
-        "        self.l_relu = torch.nn.LeakyReLU(0.1)\n",
-        "    \n",
-        "    def forward(self, input):\n",
-        "        x = self.conv(input)\n",
-        "        x = self.bn(x)\n",
-        "        return self.l_relu(x)\n",
-        "```\n",
         "\n",
         "### Darknet-like model\n",
         "```python\n",
@@ -144,7 +118,6 @@
         "        self.seq.add_module(f\"conv_3\", CNNBlock(128, 64, stride=1, kernel_size=1, padding=0))\n",
         "        self.seq.add_module(f\"conv_4\", CNNBlock(64, 128, stride=1, kernel_size=3, padding=0))\n",
         "        self.seq.add_module(f\"conv_5\", CNNBlock(128, 128, stride=1, kernel_size=3, padding=1))\n",
-        "        \n",
         "        self.fcs = self._create_fcs()\n",
         "\n",
         "    def _create_fcs(self):\n",
@@ -152,8 +125,7 @@
         "            torch.nn.Flatten(),\n",
         "            torch.nn.Linear(128 * self.S * self.S, 4096),\n",
         "            torch.nn.LeakyReLU(0.1),\n",
-        "            torch.nn.Linear(4096, self.S * self.S * (self.C + self.B*5))\n",
-        "        )\n",
+        "            torch.nn.Linear(4096, self.S * self.S * (self.C + self.B*5)))\n",
         "        return output\n",
         "\n",
         "    def forward(self, input:torch.Tensor)->tuple:\n",
@@ -167,6 +139,17 @@
       ],
       "metadata": {
         "id": "xjACRqpCYEMi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Yolo Loss\n",
+        "From the Yolo paper, I recall the global formula of the Yolo loss. Again, I recommand you to look at the references I listed above.\n",
+        " "
+      ],
+      "metadata": {
+        "id": "Tm3O1FVd2Ebu"
       }
     }
   ]
