--- a/YoloV1_Compagny_MealTrays/get_annotation.ipynb
+++ b/YoloV1_Compagny_MealTrays/get_annotation.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 1,
       "metadata": {
         "id": "uPc5KMofvJLQ"
       },
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 2,
       "metadata": {
         "id": "H-5nSEO0vJLU"
       },
@@ -96,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "metadata": {
         "id": "-VuQlQnPvJLW"
       },
@@ -106,23 +106,65 @@
         "for file in data_txt:\n",
         "    obj_list = []\n",
         "    with open(file, 'r') as f:\n",
-        "        line = f.readline()\n",
+        "        line = ['_']\n",
         "        while len(line) != 0:\n",
-        "            line_list = line.split()\n",
-        "            line_list = [float(k) for k in line_list]\n",
+        "            line = f.readline()\n",
+        "            line_list = [float(k) for k in line_list.split()]\n",
         "            label = int(line_list[0])\n",
         "            line_list[0] = label\n",
         "            line_list.insert(0, label_names.get(label))\n",
         "            \n",
         "            obj_list.append(line_list)\n",
         "            \n",
-        "            line = f.readline()\n",
-        "        \n",
-        "        if bool(obj_list):\n",
+        "        if obj_list:\n",
         "            start = file.rfind('/')+1\n",
         "            end = file.rfind('.txt')\n",
         "            key = file[start : end]\n",
         "            annotations[key] = obj_list"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'20220308112654_000042_059_0000000001_B______xx_C (1636)'"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "key"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[['Assiette', 0, 0.414109, 0.291401, 0.412906, 0.565905],\n",
+              " ['Dessert', 5, 0.233531, 0.713405, 0.1885, 0.362759],\n",
+              " ['Entree', 1, 0.510547, 0.746034, 0.319969, 0.411121],\n",
+              " ['Fruit', 6, 0.742875, 0.764784, 0.158688, 0.243017],\n",
+              " ['Boisson', 3, 0.673172, 0.466121, 0.133281, 0.230948]]"
+            ]
+          },
+          "execution_count": 7,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "annotations[key]"
       ]
     },
     {
