--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -15,52 +15,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = torch.rand(16, 18)"
+    "size = 448\n",
+    "S = 7\n",
+    "B = 2\n",
+    "C = 8\n",
+    "channel_img = 3\n",
+    "BATCH_SIZE = 16\n",
+    "\n",
+    "box_true = torch.zeros(BATCH_SIZE, S, S, 4+1)\n",
+    "N = range(BATCH_SIZE)\n",
+    "i = torch.randint(S, (1,BATCH_SIZE))\n",
+    "j = torch.randint(S, (1,BATCH_SIZE))\n",
+    "box_value = torch.rand((BATCH_SIZE, 4+1))\n",
+    "box_true[N,i,j] = box_value\n",
+    "box_true[N,i+1,j-2] = box_value\n",
+    "box_true[N,i-2,j-1] = box_value\n",
+    "\n",
+    "\n",
+    "# box_true\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0.4961, 0.0623, 0.6490, 0.4608, 0.8545, 0.6572, 0.2146, 0.2105, 0.8587,\n",
-       "        0.3040, 0.5601, 0.7732, 0.1007, 0.1342, 0.4197, 0.7456, 0.5010, 0.4637])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "a[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0.6572, 0.2146])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a[0][5:7]"
+    "cells_with_obj = box_true.nonzero()\n",
+    "cells_with_obj"
    ]
   },
   {
@@ -69,6 +55,46 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = torch.randint(0,9,(3,3,5))\n",
+    "b = torch.randint(0,9,(3,3,5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[4, 3, 1, 0, 4],\n",
+       "         [8, 2, 8, 5, 8],\n",
+       "         [0, 4, 8, 0, 7]],\n",
+       "\n",
+       "        [[3, 4, 4, 1, 2],\n",
+       "         [6, 7, 2, 5, 8],\n",
+       "         [8, 3, 2, 3, 6]],\n",
+       "\n",
+       "        [[0, 0, 6, 5, 7],\n",
+       "         [2, 4, 0, 7, 1],\n",
+       "         [8, 0, 8, 2, 8]]])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
   }
  ],
  "metadata": {
