--- a/YoloV1_Compagny_MealTrays/get_annotation.ipynb
+++ b/YoloV1_Compagny_MealTrays/get_annotation.ipynb
@@ -239,29 +239,159 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 338,
+      "execution_count": 434,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "a = torch.Tensor([[ 3,  4,  0],\n",
+        "        [ 3,  4,  1],\n",
+        "        [ 3,  4,  2],\n",
+        "        [ 3,  4,  3],\n",
+        "        [ 3,  4,  4],\n",
+        "        [ 3,  4,  5],\n",
+        "        [ 5,  1,  0],\n",
+        "        [ 5,  1,  1],\n",
+        "        [ 5,  1,  2],\n",
+        "        [ 5,  1,  3],\n",
+        "        [ 5,  1,  4],\n",
+        "        [ 5,  1,  9],\n",
+        "        [ 5,  2,  0],\n",
+        "        [ 5,  2,  1],\n",
+        "        [ 5,  2,  2],\n",
+        "        [ 5,  2,  3],\n",
+        "        [ 5,  2,  4],\n",
+        "        [ 5,  2,  7],\n",
+        "        [ 5,  4,  0],\n",
+        "        [ 5,  4,  1],\n",
+        "        [ 5,  4,  2],\n",
+        "        [ 5,  4,  3],\n",
+        "        [ 5,  4,  4],\n",
+        "        [ 5,  4, 10]])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 446,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "b, c, _ = a.permute(1,0)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 464,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "k = torch.stack((b,c),dim=1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 476,
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "999\n"
-          ]
-        },
-        {
           "data": {
             "text/plain": [
-              "7"
+              "tensor([3., 5., 5., 5.])"
             ]
           },
-          "execution_count": 338,
+          "execution_count": 476,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "fct(7, b=b)"
+        "torch.unique(k,dim=0).permute(1,0)[0]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 480,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "target = torch.zeros(32, 7,7,5)\n",
+        "target[3, 2, 3] = torch.rand(5)\n",
+        "target[3, 3, 1] = torch.rand(5)\n",
+        "target[3, 6, 3] = torch.rand(5)\n",
+        "target[19, 2, 3] = torch.rand(5)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 521,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "N, cells_i, cells_j, _ = target.nonzero().permute(1,0)\n",
+        "\n",
+        "### Stacking in a new tensor\n",
+        "cells_with_obj = torch.stack((N, cells_i, cells_j), dim=0)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 522,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "torch.Size([3, 20])"
+            ]
+          },
+          "execution_count": 522,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "cells_with_obj.shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 530,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "tensor([[ 3,  3,  3, 19],\n",
+              "        [ 2,  3,  6,  2],\n",
+              "        [ 3,  1,  3,  3]])"
+            ]
+          },
+          "execution_count": 530,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "torch.unique(cells_with_obj,dim=1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 531,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "torch.Size([32, 7, 7, 5])"
+            ]
+          },
+          "execution_count": 531,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "target.shape"
       ]
     },
     {
