--- a/YoloV1_Compagny_MealTrays/get_annotation.ipynb
+++ b/YoloV1_Compagny_MealTrays/get_annotation.ipynb
@@ -309,89 +309,118 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 480,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "target = torch.zeros(32, 7,7,5)\n",
-        "target[3, 2, 3] = torch.rand(5)\n",
-        "target[3, 3, 1] = torch.rand(5)\n",
-        "target[3, 6, 3] = torch.rand(5)\n",
-        "target[19, 2, 3] = torch.rand(5)"
+        "torch.Tensor()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 521,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
-        "N, cells_i, cells_j, _ = target.nonzero().permute(1,0)\n",
+        "import torch\n",
+        "target = torch.zeros(32, 7,7,10)\n",
+        "# F.one_hot(torch.as_tensor(label, dtype=torch.int64), self.C)\n",
+        "target[3, 2, 3] = torch.functional.F.one_hot(torch.as_tensor(7, dtype=torch.int64), num_classes=10)\n",
+        "target[3, 3, 1] = torch.functional.F.one_hot(torch.as_tensor(7, dtype=torch.int64), num_classes=10)\n",
+        "target[3, 6, 3] = torch.functional.F.one_hot(torch.as_tensor(1, dtype=torch.int64), num_classes=10)\n",
+        "target[19, 2, 3] = torch.functional.F.one_hot(torch.as_tensor(9, dtype=torch.int64), num_classes=10)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "prediction = torch.zeros(32, 7,7,10)\n",
+        "prediction[3, 2, 3] = torch.functional.F.one_hot(torch.as_tensor(7, dtype=torch.int64), num_classes=10)\n",
+        "prediction[3, 3, 1] = torch.functional.F.one_hot(torch.as_tensor(7, dtype=torch.int64), num_classes=10)\n",
+        "prediction[3, 6, 3] = torch.functional.F.one_hot(torch.as_tensor(4, dtype=torch.int64), num_classes=10)\n",
+        "prediction[19, 2, 3] = torch.functional.F.one_hot(torch.as_tensor(0, dtype=torch.int64), num_classes=10)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "tensor([ True,  True, False, False])"
+            ]
+          },
+          "execution_count": 20,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "N = [3,3,3,19]\n",
+        "a = [2,3,6,2]\n",
+        "b = [3,1,3,3]\n",
         "\n",
-        "### Stacking in a new tensor\n",
-        "cells_with_obj = torch.stack((N, cells_i, cells_j), dim=0)"
+        "torch.argmax(target[N,a,b],dim=-1) == torch.argmax(prediction[N,a,b],dim=-1)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 522,
+      "execution_count": 29,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "a = torch.zeros(8,6,6,5)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 33,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "torch.Size([3, 20])"
+              "tensor([[ True],\n",
+              "        [False],\n",
+              "        [False]])"
             ]
           },
-          "execution_count": 522,
+          "execution_count": 33,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "cells_with_obj.shape"
+        "a = torch.rand(3,1)\n",
+        "b = torch.rand(3,1)\n",
+        "a > b"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 530,
+      "execution_count": 38,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "tensor([[ 3,  3,  3, 19],\n",
-              "        [ 2,  3,  6,  2],\n",
-              "        [ 3,  1,  3,  3]])"
+              "tensor([[5],\n",
+              "        [4],\n",
+              "        [4]])"
             ]
           },
-          "execution_count": 530,
+          "execution_count": 38,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "torch.unique(cells_with_obj,dim=1)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 531,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "torch.Size([32, 7, 7, 5])"
-            ]
-          },
-          "execution_count": 531,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "target.shape"
+        "(a>b).to(torch.int64) + 4"
       ]
     },
     {
